--- a/package.json
+++ b/package.json
@@ -63,29 +63,35 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.34.0",
     "@nestjs/axios": "^4.0.1",
-    "@nestjs/common": "^11.1.6",
-    "@nestjs/core": "^11.1.6",
+    "@nestjs/common": "^11.0.0",
+    "@nestjs/core": "^11.0.0",
     "@rollup/plugin-commonjs": "^28.0.6",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@types/express": "^5.0.3",
-    "@types/jest": "^29.5.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.3.0",
     "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.41.0",
+    "@typescript-eslint/parser": "^8.41.0",
     "axios": "^1.11.0",
-    "eslint": "^8.50.0",
-    "jest": "^29.7.0",
+    "eslint": "^9.34.0",
+    "eslint-plugin-nestjs": "^1.2.3",
+    "jest": "^30.1.1",
     "reflect-metadata": "^0.2.2",
     "rimraf": "^6.0.1",
     "rollup": "^4.0.0",
     "rollup-plugin-typescript2": "^0.36.0",
     "rxjs": "^7.8.2",
     "ts-jest": "^29.1.0",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.41.0"
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "dependencies": {
+    "@nestjs/platform-express": "^11.0.0"
   }
 }
