--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,11 +36,6 @@
   },
   "include": [
     "src/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "**/*.spec.ts",
-    "**/*.test.ts"
   ]
+  // "exclude": ["node_modules",    "dist",    "**/*.spec.ts",    "**/*.test.ts"  ]
 }
