--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": [
       "ES2020"
     ],
+    "isolatedModules": true,
     "declaration": true,
     "declarationDir": "./dist",
     "removeComments": true,
@@ -36,6 +37,11 @@
   },
   "include": [
     "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "**/*.spec.ts",
+    "**/*.test.ts"
   ]
-  // "exclude": ["node_modules",    "dist",    "**/*.spec.ts",    "**/*.test.ts"  ]
 }
