--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yagas-cat/nestjs-auth",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "NestJS authentication and authorization package with JWT validation, permission and role-based access control",
   "type": "module",
   "author": "Yagas Cat",
@@ -24,7 +24,7 @@
     "CHANGELOG.md"
   ],
   "scripts": {
-    "clean": "rimraf dist",
+    "clean": "rimraf dist tsconfig.tsbuildinfo",
     "build": "npm run clean && tsc",
     "build:watch": "tsc --watch",
     "test": "jest",
