--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yagas-cat/nestjs-auth",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "NestJS authentication and authorization package with JWT validation, permission and role-based access control",
   "type": "module",
   "author": "Yagas Cat",
@@ -55,11 +55,11 @@
   },
   "homepage": "https://github.com/jaggalex/nestjs-auth-package#readme",
   "peerDependencies": {
-    "@nestjs/axios": "^3.0.0",
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
-    "reflect-metadata": "^0.1.13",
+    "@nestjs/axios": "^3.0.0 || ^4.0.0",
+    "@nestjs/common": "^10.0.0 || ^11.0.0",
+    "@nestjs/core": "^10.0.0 || ^11.0.0",
+    "@nestjs/platform-express": "^10.0.0 || ^11.0.0",
+    "reflect-metadata": "^0.1.13 || ^0.2.0",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
